--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
  <h1>Hello Coursera Students !I am thrilled about this course!</h1>
+<p>hi this is a coursera course</p>
 </body>
 </html>
